# dotfiles

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
alacritty/.config/alacritty/: alacritty.toml
bash/: .bashfuncs  .bashrc  bashfuncs.sh
ghostty/.config/ghostty/: config
hypr/.config/hypr/: bindings.conf  hypridle.conf  hyprland.conf  hyprlock.conf  input.conf  looknfeel.conf  monitors.conf
nvim/.config/nvim/: README.md  lazy-lock.json  lazy-lock.sync-conflict-20250829-011527-RY2HWHR.json  lazyvim.json
skills/.agent_skills/avoid-ai-writing/: SKILL.md
skills/.agent_skills/documentation/: SKILL.md
skills/.agent_skills/marty-has-an-idea/: SKILL.md
skills/.agent_skills/marty-needs-an-idea/: SKILL.md
skills/.agent_skills/marty-spits-hot-fire/: SKILL.md
skills/.agent_skills/python-sqlalchemy/: SKILL.md
skills/.agent_skills/stripe/: SKILL.md
skills/.agents/skills/: bash-linux  bash-scripting  caveman  compress  find-skills  lyric-reviewer  python-backend  python-fundamentals-313  python-package-management
skills/.claude/skills/: developing-with-streamlit  documentation  internal-comms  marty-has-an-idea  polars  pronunciation-specialist  python-fastapi  python-fundamentals  python-sqlalchemy  python-testing-deep  python-tooling  python-type-hints  suno-engineer  tmux  ui-ux-designer
skills/.opencode/skills/: album-art-director  avoid-ai-writing  bash-pro  caveman-commit  python  (+7 more)
starship/.config/: starship.toml
tmux/: .tmux.conf
utils/.config/randomcode/: .gitignore  README.md  completion.bash  main.py  pyproject.toml  randomcode.py  randomcode.sh
(+32 files in other folders)
