[project]
name = "randomcode"
version = "0.1.0"
description = "Launch or attach to project-specific herdr workspaces in ~/Sync/randomcode"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
randomcode = "randomcode:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["randomcode"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM", "PTH"]
ignore = ["E501"]
